Small fixes
- Fix about page hanging
- Fix paginator in speedtest
- Fix custom scrollbar height

--- a/public/css/default/_general.scss
+++ b/public/css/default/_general.scss
@@ -5,6 +5,7 @@
 
 *::-webkit-scrollbar {
     width: 7px;
+    height: 7px;
 }
 
 *::-webkit-scrollbar-thumb {
